# physics-simulator

./: .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  physicsSimulator.py  pyproject.toml
src/physics_simulator/: main.py
